# manager_computer_room

./: CMakeLists.txt  Identity.hpp  Makefile  README.md  cmake_install.cmake  computer_room.hpp  computer_room.txt  global_file.hpp  main.cpp  manager.cpp  manager.hpp  order_file.cpp  order_file.hpp  student.cpp  student.hpp  teacher.cpp  teacher.hpp
